--- a/aQuesty/src/styles/auth.scss
+++ b/aQuesty/src/styles/auth.scss
@@ -41,4 +41,61 @@ main{
     align-items: center;
     justify-content: center;
 }
+
+.main-content{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 320px;
+    align-items: stretch;
+    text-align: center;
+    > img{
+        align-items: center;
+    }
+    form{
+        input{
+            height: 50px;
+            border-radius: 8px;
+            border-radius: 8pc;
+            padding: 0 16px;
+            background: #fff;
+            border: 1px solid #a8a8b3;
+        }
+        button{
+            margin-top: 16px;
+        }
+        button, input{
+            width: 100%;
+        }
+    }
+}
+.separator{
+    font-size:14px ;
+    color:#a8a8b3;
+
+    margin: 32px 0;
+    display: flex;
+    align-items: center;
+
+    &::before{
+        content: ' ';
+        flex: 1;
+        height: 1px;
+        background: #a8a8b3;
+        margin-right: 16px;
+
+
+    }    
+    &::after{
+        content: ' ';
+        flex: 1;
+        height: 1px;
+        background: #a8a8b3;
+        margin-left: 16px;
+        
+
+    }
+
+}
+
 }
